fixed animation on firefox

--- a/css3dCube/main.css
+++ b/css3dCube/main.css
@@ -36,6 +36,7 @@ body {
   
   -moz-perspective: 800px;
   -webkit-perspective: 800px;
+    -ms-perspective: 800px;
   perspective: 800px;
   /*border: 1px solid black;*/
 }
@@ -54,12 +55,13 @@ body {
 
 /* Cube Definition */
 #cube {
-	color: #C1530B;
-  width: 100%;
-  height: 100%;
+color: #C1530B;
+  width: 302px;
+  height: 302px;
   position: absolute;
   
-  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;    
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
 }
@@ -72,8 +74,9 @@ body {
   display: block;
   position: absolute;
 	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
+	-ms-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 /* Background / Size of the Planes */
@@ -92,7 +95,6 @@ body {
 	width: 302px;
   height: 302px;
 	outline: 1px solid transparent;
-
 }
 
 .fronti, .backi, .righti, .lefti {
@@ -132,19 +134,19 @@ body {
 #cube .top		 { -webkit-transform: rotateX(  90deg )	translateZ(  150px );} 
 #cube .bottom	 { -webkit-transform: rotateX( -90deg )	translateZ(  150px );} 
 
-/* Firefox - broken animation */
-#cube .fronto  { -moz-transform: translateZ( 150px );}
-#cube .backo   { -moz-transform: rotateY( 180deg ) translateZ(  150px );}
-#cube .righto  { -moz-transform: rotateY(  90deg ) translateZ(  150px );}
-#cube .lefto   { -moz-transform: rotateY( -90deg ) translateZ(  150px );}
-#cube .fronti  { -moz-transform: rotateY( 180deg ) translateZ( -149px ) translateX(-1px);}
-#cube .backi   { -moz-transform: translateZ( -149px ) translateX(1px);}
-#cube .righti  { -moz-transform: rotateY( -90deg ) translateZ( -149px );}
-#cube .lefti   { -moz-transform: rotateY(  90deg ) translateZ( -149px );}
-#cube .top		 { -moz-transform: rotateX(  90deg )	translateZ(  150px );} 
-#cube .bottom	 { -moz-transform: rotateX( -90deg )	translateZ(  150px );} 
+/* IE */
+#cube .fronto  { -ms-transform: translateZ( 150px );}
+#cube .backo   { -ms-transform: rotateY( 180deg ) translateZ(  150px );}
+#cube .righto  { -ms-transform: rotateY(  90deg ) translateZ(  150px );}
+#cube .lefto   { -ms-transform: rotateY( -90deg ) translateZ(  150px );}
+#cube .fronti  { -ms-transform: rotateY( 180deg ) translateZ( -149px ) translateX(-1px);}
+#cube .backi   { -ms-transform: translateZ( -149px ) translateX(1px);}
+#cube .righti  { -ms-transform: rotateY( -90deg ) translateZ( -149px );}
+#cube .lefti   { -ms-transform: rotateY(  90deg ) translateZ( -149px );}
+#cube .top      { -ms-transform: rotateX(  90deg )	translateZ(  150px );} 
+#cube .bottom   { -ms-transform: rotateX( -90deg )	translateZ(  150px );} 
 
-/* Future Browsers */
+/* Firefox + Future Browsers */
 #cube .fronto  { transform: translateZ( 150px );}
 #cube .backo   { transform: rotateY( 180deg ) translateZ(  150px );}
 #cube .righto  { transform: rotateY(  90deg ) translateZ(  150px );}
@@ -153,10 +155,10 @@ body {
 #cube .backi   { transform: translateZ( -149px ) translateX(1px);}
 #cube .righti  { transform: rotateY( -90deg ) translateZ( -149px );}
 #cube .lefti   { transform: rotateY(  90deg ) translateZ( -149px );}
-#cube .top		 { transform: rotateX(  90deg )	translateZ(  150px );} 
-#cube .bottom	 { transform: rotateX( -90deg )	translateZ(  150px );} 
+#cube .top      { transform: rotateX(  90deg )	translateZ(  150px );} 
+#cube .bottom   { transform: rotateX( -90deg )	translateZ(  150px );} 
 
-#cube { -moz-transform: translateZ( -150px ); -webkit-transform: translateZ( -150px ); transform: translateZ( -150px ); }
+#cube { -ms-transform: translateZ( -150px ); -webkit-transform: translateZ( -150px ); transform: translateZ( -150px ); }
 
 /* Text */
 figure .text {
